# sassi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  sensitive-info.yml
docs/: README.md  advanced-guide.md  backends-and-runtimes.md  concepts.md  dependency-footprint.md  getting-started.md  query-refresh-boundaries.md  red-team-release-gate.md  release-readiness.md
docs/specs/: 2026-05-14-cacheable-postcard-wire-guard-design-v1.md  2026-05-14-jsahibon-portable-json-design-v3.md
examples/bardownski/: Cargo.toml  README.md
examples/bardownski/data/: sample.csv
examples/bardownski/src/: app.rs  data.rs  filters.rs  heatmap.rs  main.rs  model.rs  ui.rs
proofs/heeranjid-wire/: Cargo.toml  README.md
proofs/heeranjid-wire/tests/: heeranjid_wire.rs
sassi/: Cargo.toml
sassi-cache-redis/: Cargo.toml  README.md
sassi-cache-redis/src/: lib.rs
sassi-cache-redis/tests/: redis_invalidation_stream.rs
sassi-codegen/: Cargo.toml
sassi-codegen/src/: cacheable_impl.rs  derive_options.rs  fields_struct.rs  lib.rs
sassi-codegen/tests/: external_fields.rs
sassi-macros/: Cargo.toml
sassi-macros/src/: cacheable.rs  lib.rs  trait_impl.rs
sassi-macros/tests/: compile_fail.rs  renamed_dependency.rs
sassi-macros/tests/compile_fail/: cacheable_bad_watermark_field.stderr  cacheable_duplicate_watermark_field.rs  cacheable_duplicate_watermark_field.stderr  cacheable_empty_watermark_field.stderr  cacheable_field_level_watermark.rs  cacheable_field_level_watermark.stderr  cacheable_generic_struct.stderr  cacheable_missing_id_field.stderr  cacheable_no_watermark_attr.rs  cacheable_no_watermark_attr.stderr  cacheable_non_monotonic_watermark_field.stderr  cacheable_on_enum.rs  cacheable_on_enum.stderr  cacheable_unknown_option.stderr
sassi-macros/tests/lihaaf/compile_fail/: cacheable_bad_watermark_field.rs  cacheable_bad_watermark_field.stderr  cacheable_duplicate_watermark_field.stderr  cacheable_empty_watermark_field.rs  cacheable_empty_watermark_field.stderr  cacheable_field_level_watermark.stderr  cacheable_generic_struct.rs  cacheable_generic_struct.stderr  cacheable_missing_id_field.rs  cacheable_missing_id_field.stderr  cacheable_no_watermark_attr.stderr  cacheable_non_monotonic_watermark_field.rs  cacheable_non_monotonic_watermark_field.stderr  cacheable_on_enum.stderr  cacheable_unknown_option.rs  cacheable_unknown_option.stderr  jsahibon_bool_ordering.rs  jsahibon_bool_ordering.stderr  jsahibon_scalar_u32.rs  jsahibon_scalar_u32.stderr  jsahibon_string_ordering.rs  jsahibon_string_ordering.stderr  watermark_bool.rs  watermark_bool.stderr  watermark_char.rs  watermark_char.stderr  watermark_delta_sync_bool.stderr  watermark_duration.stderr  watermark_tuple_arity_five.stderr  watermark_tuple_contains_bool.stderr  watermark_tuple_single.stderr  watermark_unit.rs  watermark_unit.stderr  wire_portable_duplicate_option.rs  wire_portable_duplicate_option.stderr  wire_portable_field_level.rs  wire_portable_field_level.stderr  wire_portable_helper_without_marker.rs  wire_portable_helper_without_marker.stderr  wire_portable_jsonb_wrapper.rs  (+7 more)
sassi-macros/tests/lihaaf/compile_pass/: forbid_unsafe_code_adopter.rs  wire_portable_jsahibon_pass.rs  wire_portable_pass.rs
sassi/benches/: README.md  punnu_bench.rs
sassi/src/: cacheable.rs  error.rs  executor.rs  jsahibon.rs  lib.rs  time.rs  watermark.rs  wire.rs
sassi/src/backend/: file.rs  memory.rs  mod.rs  no_backend.rs
sassi/src/predicate/: basic.rs  field_ext.rs  field_predicate.rs  jsahibon.rs  memq.rs  mod.rs
sassi/src/punnu/: config.rs  delta.rs  delta_refresh.rs  events.rs  eviction.rs  mod.rs  pool.rs  recovery.rs  refresh.rs  scope.rs  single_flight.rs  state.rs  tenant.rs  ttl.rs  write.rs
sassi/src/sassi/: mod.rs  orchestrator.rs  trait_registry.rs
sassi/tests/: backend_failure_modes.rs  backend_file.rs  backend_no_backend.rs  cacheable_derive.rs  cross_version_compat.rs  delta_sync_recovery.rs  delta_sync_subscription.rs  delta_sync_watermark.rs  jsahibon.rs  jsahibon_serde_json_bridge.rs  no_runtime_refresh.rs  predicate_basic.rs  predicate_memq.rs  predicate_optional_fields.rs  punnu_apply_delta.rs  punnu_doctrine_tenant.rs  punnu_doctrine_visage.rs  punnu_doctrine_wrapper.rs  punnu_entries_export.rs  punnu_events.rs  punnu_executor_default.rs  punnu_executor_wasm.rs  punnu_get_or_fetch.rs  punnu_get_or_fetch_many.rs  punnu_identity_map.rs  punnu_l1_invariants.rs  punnu_lru_epoch_saturation.rs  punnu_metrics.rs  punnu_namespace.rs  punnu_refresh.rs  punnu_single_flight.rs  punnu_snapshot_jsahibon.rs  punnu_snapshot_swap.rs  punnu_snapshot_wrapper.rs  punnu_ttl_lazy.rs  punnu_ttl_sweep.rs  sassi_orchestrator.rs  wire_portable.rs
sassi/tests/compile_fail/: watermark_bool.stderr  watermark_char.stderr  watermark_delta_sync_bool.rs  watermark_delta_sync_bool.stderr  watermark_duration.rs  watermark_duration.stderr  watermark_tuple_arity_five.rs  watermark_tuple_arity_five.stderr  watermark_tuple_contains_bool.rs  watermark_tuple_contains_bool.stderr  watermark_tuple_single.rs  watermark_tuple_single.stderr  watermark_unit.stderr
xtask/: Cargo.toml
xtask/src/: check_test_surface.rs  main.rs  sensitive_info.rs
