[workspace]
members = ["sassi", "sassi-codegen", "sassi-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TarunvirBains/sassi"
homepage = "https://github.com/TarunvirBains/sassi"
authors = ["Tarunvir Bains"]
rust-version = "1.95"

[workspace.dependencies]
# Async substrate.
# `sync` powers the broadcast channel that backs Punnu's event stream
# (no runtime required; works on WASM too). `rt` + `time` are needed by
# the optional background TTL sweep task. `macros` powers `#[tokio::test]`
# in integration tests.
tokio = { version = "1.48", default-features = false, features = ["sync", "rt", "time", "macros"] }
futures = "0.3"

# Error derive — `thiserror` is the de facto Rust convention for
# library error types; keeps Display/Debug impls consistent.
thiserror = "2"

# Serde — opt-in for cross-runtime wire format
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Cache primitives
lru = "0.12"
dashmap = "6"

# Logging — standard tracing surface
tracing = "0.1"

# Async-trait — until trait async stabilizes for object-safe traits
async-trait = "0.1"

# Cross-target monotonic clock. On native, `web_time::Instant` is a
# re-export of `std::time::Instant`; on `wasm32-unknown-unknown`, it
# wraps `Performance.now()`. Used by sassi only on wasm — native
# builds keep `tokio::time::Instant` so tests retain
# `tokio::time::pause()` / `advance(...)` determinism. Workspace dep
# so the wasm-side feature pulls a single, vetted version.
web-time = "1"

# WASM-only spawn + sleep primitives. Pulled in by the `runtime-wasm`
# feature on the sassi crate; the workspace declares the version so
# the choice is auditable in one place.
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.4", features = ["futures"] }

# Macro substrate
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# Typed distributed plugin registration. Used by sassi's
# `#[sassi::trait_impl]` macro to register `(model type, trait)` pairs
# at process startup without hand-rolling platform link sections.
# Encapsulates the `unsafe(link_section)` machinery inside `inventory`
# itself, so adopters that set `#![forbid(unsafe_code)]` are not
# rejected by macro expansion. Has documented support for
# `wasm32-unknown-unknown`.
inventory = "0.3"
