[package]
name = "sassi-cache-redis"
description = "Redis CacheBackend implementation for sassi with pub/sub invalidation."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cache", "redis", "invalidation"]
categories = ["caching"]

[dependencies]
sassi = { path = "../sassi", version = "0.1.0-alpha.3" }
async-trait = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }
redis = { version = "1.2", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "script"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1.52", default-features = false, features = ["sync", "rt", "time", "macros"] }
