[package]
name = "sassi-codegen"
description = "Shared codegen primitives for sassi-macros and downstream proc-macro consumers."
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cache", "codegen", "macros"]
categories = ["caching", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
