[package]
name = "sassi-codegen"
description = "Support crate for Sassi macro/codegen integrations; most adopters depend on sassi directly."
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cache", "codegen", "macros"]
categories = ["caching", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
