[package]
name = "sassi-macros"
description = "Proc macros for sassi (#[derive(Cacheable)], #[sassi::trait_impl])."
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
sassi-codegen = { path = "../sassi-codegen", version = "0.1.0-alpha.0" }

[dev-dependencies]
sassi = { path = "../sassi", version = "0.1.0-alpha.0" }
trybuild = "1"
