[package]
name = "sassi-macros"
description = "Support proc-macro crate re-exported by sassi for ordinary adopters."
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cache", "derive", "macros"]
categories = ["caching", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
sassi-codegen = { path = "../sassi-codegen", version = "0.1.0-beta.1" }

[dev-dependencies]
sassi = { path = "../sassi" }
trybuild = { workspace = true }
