[package]
name = "sassi-macros"
description = "Support proc-macro crate re-exported by sassi for ordinary adopters."
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cache", "derive", "macros"]
categories = ["caching", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
sassi-codegen = { path = "../sassi-codegen", version = "0.1.0-beta.3" }

[dev-dependencies]
# `sassi` as a dev-dep forms a cycle (`sassi` regularly depends on
# `sassi-macros`; `sassi-macros` dev-deps `sassi` here). Cargo permits
# this because dev-deps do not participate in the published / runtime
# dependency graph — they only show up when compiling this crate's own
# tests. Required so the lihaaf compile_fail / compile_pass fixtures
# can `use sassi::{Cacheable, MonotonicWatermark, ...}` and reach the
# proc-macros through `sassi`'s `pub use sassi_macros::*` re-export.
sassi = { path = "../sassi" }

# Lihaaf — Phase 8.5 replacement for trybuild. See the
# `[package.metadata.lihaaf]` block below for fixture-suite
# configuration. lihaaf ships as the `cargo-lihaaf` binary (cargo
# subcommand), not a library dep; adopters subprocess-spawn `cargo
# lihaaf` instead of importing `lihaaf::*`. CI installs the
# `cargo-lihaaf` binary explicitly; local contributors should `cargo
# install lihaaf --version 0.1.0-beta.3` (or run from a checkout of
# the sibling repo).
#
# Fixture layout (`tests/lihaaf/{compile_fail,compile_pass}/`) follows
# the v0.1 lihaaf spec. Snapshots use lihaaf's stdlib-only normalizer
# (`$DIR` for fixture-directory paths, `$WORKSPACE` for workspace
# root, `$RUST` for sysroot, `$CARGO/registry/` for cargo registry).
# `dylib_crate = "sassi"` (not `sassi-macros`) because fixtures `use
# sassi::*`; the proc-macros are loaded transitively through `sassi`'s
# `pub use sassi_macros::*` re-export. `extern_crates[0]` MUST equal
# `dylib_crate` per spec §3.2.

# Fixture suite config consumed by `cargo lihaaf`. See lihaaf v0.1
# spec §3 (`docs/spec/lihaaf-v0.1.md` in the lihaaf repo). The harness
# builds `sassi` as a release-mode dylib once per session, then
# dispatches every fixture under `fixture_dirs` to a fresh `rustc`
# invocation linking the dylib via `--extern`. Snapshots live next to
# each compile_fail `.rs` fixture as a sibling `.stderr` file using
# lihaaf's normalized output (`$DIR`, `$WORKSPACE`, `$RUST`,
# `$CARGO/registry/`, LF endings, collapsed blanks, stripped trailing
# whitespace).
[package.metadata.lihaaf]
dylib_crate = "sassi"
extern_crates = ["sassi", "sassi-macros"]
features = ["serde-json-bridge"]
edition = "2024"
fixture_dirs = ["tests/lihaaf/compile_fail", "tests/lihaaf/compile_pass"]
