[package]
name = "sassi"
description = "Typed in-memory pool with composable predicate algebra and cross-runtime trait queries."
readme = "../README.md"
keywords = ["cache", "lru", "predicate", "query", "rust"]
categories = ["caching", "data-structures"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
# `serde` enables the wire-format envelope (lands in a later cluster).
# `runtime-tokio` enables the optional background TTL sweep task and is
# the typical setup for native consumers; tests rely on it via
# `#[tokio::test]`. `runtime-wasm` is the WASM-target counterpart and
# selects the gloo-timers-based executor.
#
# `runtime-wasm` is reserved for Cluster B, Task 10 (`PunnuExecutor`
# abstraction) — the flag is declared today so consumers see the full
# feature shape, but no code is gated behind it yet. WASM target
# verification is tracked at
# https://github.com/TarunvirBains/sassi/issues/3 (also covers Task 18
# CI matrix work).
default = ["serde", "runtime-tokio"]
serde = ["dep:serde", "dep:serde_json"]
runtime-tokio = []
runtime-wasm = []

[dependencies]
# `tokio` is unconditional — the broadcast channel that backs Punnu's
# event stream lives behind `tokio::sync` and works on every supported
# target, including WASM. The `runtime-tokio` feature only governs
# whether the spawn-driven background sweep task is compiled in.
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
lru = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sassi-macros = { path = "../sassi-macros", version = "0.1.0-alpha.0" }

[dev-dependencies]
# `test-util` enables `tokio::time::pause` / `advance` and the
# `#[tokio::test(start_paused = true)]` attribute. Required by the
# TTL test files (`punnu_ttl_lazy.rs`, `punnu_ttl_sweep.rs`) so they
# can drive virtual time deterministically instead of relying on
# real `sleep` calls. Dev-only; never linked into a production build.
tokio = { version = "1.48", default-features = false, features = ["sync", "rt", "time", "macros", "test-util"] }
