[package]
name = "bardownski"
description = "Terminal demo for exploring Sassi-backed shot data."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
csv = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
sassi = { path = "../../sassi", version = "0.1.0-beta.2", default-features = false }
serde = { workspace = true }
